k8s/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: fashionograf-web-ui-loadbalancer-service
spec:
  type: LoadBalancer
  ports:
  - port : 80
    targetPort: 80
  selector:
    app: fashionograf-web-ui
