k8s/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: fashionograf-web-ui-svc
spec: 
  type: NodePort
  ports: 
  - port: 80
    targetPort: 80
    nodePort: 30123
    protocol: TCP
  selector: 
    app: fashionograf-web-ui
