k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fashionograf-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: www.fashionograf.com
    http:
      paths:
      - path: /
        backend:
          serviceName: fashionograf-web-ui-svc
          servicePort: 80
  tls:
  - hosts:
    - www.fashionograf.com
    secretName: fashionograf-crt
